our leadership alignment fixed

--- a/src/components/Leadership/Leadership.scss
+++ b/src/components/Leadership/Leadership.scss
@@ -47,6 +47,7 @@
         display: flex;
         align-items: center;
         gap: 16px;
+        width: 100%;
         .designation {
           font-family: 'Roboto';
           font-style: normal;
